Show topics for week 2

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
   </head>
   <body>
     <h1> Hello Emirp!</h1>
+
+    <h3> Topics for Week 2 Class </h3>
+    <ul>
+      <li>Talking about 1:1s </li>
+      <li> Cover git/Gitbhub</li>
+      <li> HTML/JS</li>
+     </ul>
+
+
   </body>
 </html>
