--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Emirp Week 2</title>
+    <script src="script.js"> </script>
   </head>
   <body>
     <h1> Hello Emirp!</h1>
 
     <h3> Topics for Week 2 Class </h3>
+    <!--Here's my list of topics-->
     <ul>
       <li>Talking about 1:1s </li>
       <li> Cover git/Gitbhub</li>
